# codex-orgst-backend

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  README.md  commitlint.config.cjs  db.sqlite3  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: deploy.yml  release.yml  tux-check.yml
.husky/: pre-commit
backend/: pyproject.toml
backend/src/apps/accounts/: models.py
backend/src/apps/boards/: apps.py
backend/src/orgst/: settings.py  urls.py  wsgi.py
backend/src/orgst/api/v1/: router.py
backend/src/orgst/settings/: base.py  local.py
frontend/: package.json  pnpm-lock.yaml  turbo.json
frontend/apps/member-card/: babel.config.cjs  eslint.config.js  jest.config.cjs  package.json  tsconfig.json  webpack.config.cjs
frontend/apps/member-card/src/: orgst-member-card.tsx
frontend/apps/root-config/: package.json  tsconfig.json  webpack.config.cjs
frontend/apps/root-config/src/: index.ejs  orgst-root-config.ts
frontend/scripts/: generate-api-types.sh
src/: manage.py
src/apps/accounts/: admin.py  admin_views.py  auth.py  backends.py  emails.py  models.py  schemas.py  services.py  tests.py  views.py
src/apps/community/: models.py  schemas.py  services.py  views.py
src/apps/kanban/: admin.py  apps.py  models.py  services.py
src/apps/projects/: models.py  permissions.py
src/orgst/: asgi.py  settings.py  urls.py
src/orgst/common/: middleware.py
src/orgst/settings/: base.py  test.py
tests/accounts/: test_accounts.py  test_admin_only_flow.py
tests/docs/: test_models.py  test_services.py  test_views.py
(+23 files in other folders)
